Update to webpack 2 and clean up src

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,8 @@
     "html"
   ],
   "rules": {
-    "import/no-unresolved": 0,
+    "arrow-parens": ["error", "as-needed", {
+      "requireForBlockBody": false,
+    }],
   }
 }
