--- a/package.json
+++ b/package.json
@@ -9,25 +9,31 @@
     "build": "node build/build.js",
     "unit": "karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
+    "test": "ava",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
   },
   "dependencies": {
     "axios": "^0.15.2",
-    "bulma": "^0.2.3",
+    "bulma": "^0.3.1",
     "cheerio": "^0.22.0",
     "cookie-parser": "^1.4.3",
     "cookies-js": "^1.2.2",
     "disconnect": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.16.4",
+    "lodash.chunk": "^4.2.0",
+    "lodash.flatmap": "^4.5.0",
+    "lodash.uniq": "^4.5.0",
     "querystring": "^0.2.0",
     "spotify-sdk": "^1.0.0-beta2",
     "spotify-web-api-node": "^2.3.5",
-    "superagent": "^2.3.0",
+    "superagent": "^3.5.0",
     "vue": "^2.0.0",
     "vue-collision": "^1.1.1",
-    "vue-icons": "^2.0.0",
     "vue-localstorage": "^0.1.3",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.0",
@@ -35,33 +41,40 @@
     "vuex-persistedstate": "^1.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "babel-core": "^6.0.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-plugin-transform-runtime": "^6.0.0",
+    "autoprefixer": "^6.7.2",
+    "ava": "^0.18.2",
+    "babel-core": "^6.22.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
-    "babel-register": "^6.0.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "browser-env": "^2.0.21",
     "callback-loader": "^0.2.4",
     "chai": "^3.5.0",
+    "chalk": "^1.1.3",
     "chromedriver": "^2.21.2",
-    "connect-history-api-fallback": "^1.1.0",
-    "cross-spawn": "^4.0.2",
-    "css-loader": "^0.25.0",
-    "eslint": "^3.8.1",
-    "eslint-config-airbnb-base": "^9.0.0",
-    "eslint-friendly-formatter": "^2.0.5",
-    "eslint-loader": "^1.5.0",
-    "eslint-plugin-html": "^1.5.3",
-    "eslint-plugin-import": "^2.0.1",
+    "connect-history-api-fallback": "^1.3.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "cross-spawn": "^5.0.1",
+    "css-loader": "^0.26.1",
+    "eslint": "^3.16.1",
+    "eslint-config-airbnb-base": "^11.0.1",
+    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-import-resolver-webpack": "^0.8.1",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-html": "^2.0.0",
+    "eslint-plugin-import": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "function-bind": "^1.0.2",
-    "html-webpack-plugin": "^2.8.1",
-    "http-proxy-middleware": "^0.17.2",
+    "express": "^4.14.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "file-loader": "^0.10.0",
+    "friendly-errors-webpack-plugin": "^1.1.3",
+    "function-bind": "^1.1.0",
+    "html-webpack-plugin": "^2.28.0",
+    "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0-beta1",
     "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.4",
@@ -71,34 +84,48 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-sinon-chai": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^1.7.0",
+    "karma-spec-reporter": "0.0.30",
+    "karma-webpack": "^2.0.2",
     "lolex": "^1.4.0",
     "mocha": "^3.1.0",
     "nightwatch": "^0.9.8",
-    "node-sass": "^3.10.1",
-    "ora": "^0.3.0",
+    "node-sass": "^4.5.0",
+    "opn": "^4.0.2",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
+    "ora": "^1.1.0",
+    "p-immediate": "^2.1.0",
     "phantomjs-prebuilt": "^2.1.3",
-    "sass-loader": "^4.0.2",
-    "selenium-server": "3.0.1",
+    "rimraf": "^2.6.0",
+    "sass-loader": "^6.0.2",
+    "selenium-server": "3.1.0",
+    "semver": "^5.3.0",
     "shelljs": "^0.7.4",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "stylelint": "^7.4.2",
-    "stylelint-config-suitcss": "^8.0.0",
+    "stylelint-config-suitcss": "^9.0.0",
     "stylelint-scss": "^1.3.4",
     "stylelint-selector-bem-pattern": "^1.0.0",
-    "table": "3.8.3",
+    "table": "4.0.1",
     "url-loader": "^0.5.7",
-    "vue-loader": "^9.7.0",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^0.15.0"
+    "vue-loader": "^11.0.0",
+    "vue-node": "^1.0.0",
+    "vue-style-loader": "^2.0.0",
+    "vue-template-compiler": "^2.1.10",
+    "webpack": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-hot-middleware": "^2.16.1",
+    "webpack-merge": "^3.0.0"
   },
   "main": ".eslintrc.js",
   "directories": {
     "test": "test"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "ava": {
+    "require": [
+      "./test/helpers/setup.js"
+    ]
+  }
 }
