Better linting, add icons and background color tools

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,8 @@
   },
   "extends": "airbnb-base",
   "plugins": [
-    "html"
+    "html",
+    "vue"
   ],
   "rules": {
     "arrow-parens": ["error", "as-needed", {
