--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.15.2",
     "bulma": "^0.3.1",
     "cheerio": "^0.22.0",
+    "color-thief": "^2.2.2",
     "cookie-parser": "^1.4.3",
     "cookies-js": "^1.2.2",
     "disconnect": "^1.0.0",
@@ -37,6 +38,7 @@
     "vue-localstorage": "^0.1.3",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.0",
+    "vue-svg-icon": "^1.0.10",
     "vuex": "^2.0.0",
     "vuex-persistedstate": "^1.2.0"
   },
@@ -67,6 +69,7 @@
     "eslint-loader": "^1.6.1",
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-vue": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
